# mcp_copilot

./: .gitignore  2026-audit-trail-detailed.md  2026-audit-trail.md  2026-details.md  2026-goal.txt  2026-works-claude.md  2026-works-me.md  2026-works.md  LICENSE  README.md  collab.md  collab_daily.md  collab_weekly-1.md  collab_weekly-2.md  collab_weekly-3.md  demo_worklog.py  hexa-2.md  hexa-results-object.md  lgedv_vs_domestic_comprehensive.md  pyproject.toml  qcd-2.md  qcd_remove_raw.md  qcd_unit-2.md  qcd_vs_sw.md  qcd_vs_sw_unit.md  worklog.md  worklog_brief.md
260304-new-day-company/1-type/: analyze_hexa.py  collab_daily.md
260304-new-day-company/2-type/: analyze_hexa.py  collab_daily.md  hexa-metrics.json  pyproject.toml
260304-new-day-company/3-type/: analyze_hexa.py  collab_daily.md
260304-new-day-company/4-type/: analyze.py  collab_daily.md  pyproject.toml
260304-new-week-company/: dailyWeekHexa_202603041519.csv
260304-new-week-company/1-type/: analyze_hexa.py  collab_weekly.md  (+2 more)
day/: collab_day.md  dailyWeekHexa_202603031023.csv  relation.md
docs/: atlassian-mcp-tutorial.md  gerrit-mcp-tutorial.md  linux-copilot-cli-setup-korean.md  other-tools-mcp-guide.md  windows-copilot-vscode-setup-korean.md
jira-mcp-server/: README.md
report_260304/: connectWide-Daily.md  connectWide-Relation.md  connectWide-Weekly.md  key.md  국내자사_LGEDV_LGSI_협력사.md
week/: collab_weekly.md  weeklyWeekHexa_202603031026.csv
worklog_tools/: Makefile  analyze_worklog_time.py  collect_cheoljoo_2026.py  jira_confluence_collector.py  vcs_collector.py  worklog_aggregator.py
(+13 files in other folders)
