[project]
name = "mcp-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "requests>=2.34.2",
    "scipy>=1.17.1",
]

[tool.uv.workspace]
members = [
    "260304-new-week-company/1-type",
    "260304-new-week-company/4-type",
]
